--- a/src/Main/MainOutlet.scss
+++ b/src/Main/MainOutlet.scss
@@ -10,7 +10,7 @@
       top: 0;
       overflow: auto;
       padding: 0px;
-      background-color: red;
+      background-color: #4158d0;
       border-right: 1px solid #000;
       &::-webkit-scrollbar {
         display: none;
