--- a/src/Components/CardDesign.scss
+++ b/src/Components/CardDesign.scss
@@ -4,14 +4,14 @@
   .card-heading {
     font-size: 18px;
     font-weight: 600;
-    background: var(--main-gradient);
+    background: #000;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   .card-content {
     font-size: 24px;
     font-weight: 600;
-    background: var(--main-gradient);
+    background: var(--light-black);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
