--- a/src/Main/TopNav.scss
+++ b/src/Main/TopNav.scss
@@ -3,36 +3,41 @@
     padding: 10px 20px;
     background-color: #fff;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     flex-wrap: wrap;
     gap: 10px;
     align-items: center;
     border-bottom: 1px solid #e2e2e2;
     // box-shadow: 1px 2px rgba(0,0,0,.2);
-    height: 56px;
     box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.05);
-    .top-search-box{
-      position: relative;
-    .search-box {
-      border: none;
-      outline: none;
-      background: #f9f9f9;
-      padding: 6px 35px;
-      border: 1px solid rgba(0,0,0,.1);
-      font-size: 14px;
-      &:focus {
-        outline: none;
+  .user-profile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    .user-image{
+      height: 35px;
+      width: 35px;
+      border-radius: 50%;
+      overflow: hidden;
+      img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
       }
+
     }
-    .search-icon{
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      height: 14px;
-      left: 16px;
-      color: gray;
-      font-size: 13px;
+    .user-data{
+      p{
+        margin-bottom: 0px;
+        font-size: 14px;
+      }
+      h3{
+        margin-bottom: 0px;
+        font-size: 12px;
+        
+      }
+
     }
   }
 
