--- a/src/Main/MainPage.scss
+++ b/src/Main/MainPage.scss
@@ -14,3 +14,16 @@
     width: 100%;
   }
 }
+
+@media only screen and (max-width: 992px){
+  .chart-box {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+
+@media only screen and (max-width: 768px){
+  .chart-box {
+    grid-template-columns: 1fr;
+  }
+}
