--- a/src/Components/ScreenPhoto.scss
+++ b/src/Components/ScreenPhoto.scss
@@ -10,4 +10,8 @@
 }
 .sm-date{
     border: 1px solid #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10px;
   }
