--- a/src/Components/ProcessDataComp.scss
+++ b/src/Components/ProcessDataComp.scss
@@ -7,3 +7,16 @@
   max-height: 500px;
   overflow: auto;
 }
+
+@media only screen and (max-width: 992px){
+  .process-box {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+
+@media only screen and (max-width: 768px){
+  .process-box {
+    grid-template-columns: 1fr;
+  }
+}
