--- a/src/Main/SideBar.scss
+++ b/src/Main/SideBar.scss
@@ -9,3 +9,10 @@
     gap: 10px;
   }
 }
+
+
+// @media only screen and (max-width: 768px){
+//   .sidebar-data {
+//     height: 56px;
+//   }
+// }
