--- a/src/App.css
+++ b/src/App.css
@@ -163,6 +163,14 @@ body {
   color: #fff;
 }
 
+.cross-click{
+  position: absolute;
+  top: 0;
+  font-size: 20px;
+  transition: opacity 0.3s ease-in-out;
+  color: #938c8c;
+}
+
 .css-levciy-MuiTablePagination-displayedRows{
   margin-bottom: 0px !important;
 }
