--- a/src/Components/ScreenPhoto.scss
+++ b/src/Components/ScreenPhoto.scss
@@ -1,10 +1,12 @@
 .image-box {
   height: 200px;
   width: 100%;
+  position: relative;
   img {
     height: 100%;
     width: 100%;
     object-fit: cover;
+    transition: transform 0.3s ease-in-out;
   }
   
 }
